frontend/enjoy-front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: enjoy-front-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: enjoy-front
  template:
    metadata:
      name: enjoy-front-pod
      labels:
        app: enjoy-front
    spec:
      containers:
        - name: enjoy-front-container
          image: public.ecr.aws/u9j3q0k2/enjoy-front:20250918-072011
          ports:
            - containerPort: 80
              #          volumeMounts:
              #            - name: nginx-config
              #              mountPath: /etc/nginx/conf.d
              #              readOnly: true
              #      volumes:
              #        - name: nginx-config
              #          configMap:
              #            name: nginx-config
